EXTRA_DIST = *.png *.svg

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/pixmaps/
	$(INSTALL_DATA) wavbreaker.png $(DESTDIR)$(datarootdir)/pixmaps/wavbreaker.png
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/icons/hicolor/scalable/apps/
	$(INSTALL_DATA) wavbreaker.svg $(DESTDIR)$(datarootdir)/icons/hicolor/scalable/apps/wavbreaker.svg
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/icons/hicolor/48x48/apps/
	$(INSTALL_DATA) wavbreaker-48.png $(DESTDIR)$(datarootdir)/icons/hicolor/48x48/apps/wavbreaker.png
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/icons/hicolor/24x24/apps/
	$(INSTALL_DATA) wavbreaker-24.png $(DESTDIR)$(datarootdir)/icons/hicolor/24x24/apps/wavbreaker.png
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/icons/hicolor/22x22/apps/
	$(INSTALL_DATA) wavbreaker-22.png $(DESTDIR)$(datarootdir)/icons/hicolor/22x22/apps/wavbreaker.png
	$(mkinstalldirs) $(DESTDIR)$(datarootdir)/icons/hicolor/16x16/apps/
	$(INSTALL_DATA) wavbreaker-16.png $(DESTDIR)$(datarootdir)/icons/hicolor/16x16/apps/wavbreaker.png
