EXTRA_DIST = \
	     wavbreaker.svg \
	     wavbreaker-48.png wavbreaker-24.png \
	     wavbreaker-22.png wavbreaker-16.png

scalabledir = $(datarootdir)/icons/hicolor/scalable/apps/
scalable_DATA = wavbreaker.svg

icon48dir = $(datarootdir)/icons/hicolor/48x48/apps/
icon48_DATA = wavbreaker-48.png

icon24dir = $(datarootdir)/icons/hicolor/24x24/apps/
icon24_DATA = wavbreaker-24.png

icon22dir = $(datarootdir)/icons/hicolor/22x22/apps/
icon22_DATA = wavbreaker-22.png

icon16dir = $(datarootdir)/icons/hicolor/16x16/apps/
icon16_DATA = wavbreaker-16.png
